# warden

./: Cargo.toml  agent.example.yaml  build.rs
data/migrations/: 00001_init.sql
proto/: agent.proto
src/: lib.rs  main.rs
src/agent/: mod.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: mod.rs  run.rs
src/collector/: mod.rs
src/config/: loader.rs  mod.rs  schema.rs
src/executor/: mod.rs
src/grpc/: mod.rs
src/telemetry/: logging.rs  mod.rs
src/utils/: mod.rs
