[package]
name = "warden"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.15"
once_cell = "1.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[build-dependencies]
tonic-prost-build = "0.14"
